# academic-webpage

./: .gitignore  .gitmodules  LICENSE  Makefile  WebPage.cabal  index.html  stack.yaml
blurbs/: activities.md  fp-club.md  gone.md  links.md  optional-announce.md  reading-group.md  research-overview.md  students-current.md  students-past.md  students.md  teaching-current.md
css/: all.less  code.less  footer.less  home.less  main.css  main.less  navbar.less  news.less  osu.less  print.css  pubs.less  schedule.less  simple.css
haskell/: Main.hs
js/: email.js  scripts.js
news/: 2013-06-13-phd-defense.md  2013-06-25-toplas-paper-accepted.md  2013-06-25-toplas14-variational-typing-accepted.md  2013-08-01-moved-to-marburg.md  2013-09-13-fosd-paper-accepted.md  2013-09-13-fosd13-variational-graphs-accepted.md  2013-11-05-talk-at-variete.md  2014-05-27-onward-paper-accepted.md  2014-07-08-gpce14-projectional-editing-accepted.md  2014-09-15-gpce14-best-paper.md  2015-07-03-vlhcc15-programs-for-people-accepted.md  2015-08-05-brass-award.md
pages/: advising.html  community.md  denied-tenure.md  index.html  legal.md  news.html  publications.html  research.md  resources.md  robots.txt  teaching.html  teaching.md
papers/: XX-variational-data.abstract.md  dbpl17-variational-queries.abstract.md  dsl09-explaining-probability.abstract.txt  dsl09-hagl-expressiveness.abstract.txt  dsl11-causation-dsl.abstract.md  fosd13-variational-graphs.abstract.txt  gpce12-compositional-cc.abstract.txt  gpce13-variational-graphs.abstract.txt  gpce14-projectional-editing.abstract.md  gttse11-variation-programming.abstract.txt  icfp12-variational-type-errors.abstract.md  icfp18-casts-and-costs.abstract.md  jfp09-hagl.abstract.txt  (+15 more)
projects/: hagl.md  (+3 more)
(+89 files in other folders)
