name:           EricWalkingshaw-WebPage
version:        1.0
synopsis:       My academic web page.
homepage:       http://web.engr.oregonstate.edu/~walkiner/
license:        OtherLicense
license-file:   LICENSE
author:         Eric Walkingshaw
maintainer:     eric@walkingshaw.net
category:       Web
build-type:     Simple
cabal-version:  >=1.8
description:
  Statically generates my academic web page.
  Depends on the `lessc` tool for generating CSS: http://lesscss.org/

executable hakyll
  main-is:         Main.hs
  hs-source-dirs:  haskell
  build-depends:   base ==4.6.*,
                   filepath ==1.3.*,
                   blaze-html ==0.6.*,
                   hakyll ==4.3.*
