name:           WebPage
version:        1.0
synopsis:       My academic web page.
homepage:       http://web.engr.oregonstate.edu/~walkiner/
license:        OtherLicense
license-file:   LICENSE
author:         Eric Walkingshaw
maintainer:     eric@walkingshaw.net
category:       Web
build-type:     Simple
cabal-version:  >= 1.18
description:
  Statically generates my academic web page.
  Depends on the `lessc` tool for generating CSS: http://lesscss.org/

executable hakyll
  main-is:          Main.hs
  hs-source-dirs:   haskell
  default-language: Haskell2010
  build-depends: 
    base,
    containers,
    filepath,
    blaze-html,
    hakyll,
    pandoc
  other-modules:
    WebPage.Generate
    WebPage.Generate.Base
    WebPage.Generate.Context
    WebPage.Generate.Marburg
    WebPage.Generate.Rules
    WebPage.Generate.Sitemap
    WebPage.Pubs
    WebPage.Pubs.Database
    WebPage.Pubs.Paper
    WebPage.Pubs.ToHtml
